--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.11.1",
+    "eslint": "^9.13.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-unicorn": "^56.0.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
